--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -447,7 +447,7 @@ h3.cart-title {
   cursor: default;
   -webkit-transform: translateY(-40px);
   transform: translateY(-40px);
-  -webkit-backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden; */
   -webkit-transition-property: -webkit-transform;
   transition-property: transform;
   -webkit-transition-duration: 0.3s;
@@ -1018,4 +1018,15 @@ figure.instagram-item img.insta-image {
 .post-navigation:hover svg,
 .post-navigation:focus svg {
     fill: var(--primary-color);
+}
+
+/* 13. Mes ajouts
+--------------------------------------------------------------*/
+.paddingTop{
+  padding-top: 8%;
+  padding-bottom: 5%;
+}
+#carte{
+  box-shadow: 3px 3px 3px 3px gray;
+  padding-top: 20px;
 }
