--- a/templates/user/editpass.html.twig
+++ b/templates/user/editpass.html.twig
@@ -14,8 +14,8 @@
         {% endfor %}
 
       {{form_start(UserPasswordType)}}
-      {{ form_row(UserPasswordType.plainPassword) }}
-      {{ form_row(UserPasswordType.newPassword) }}
+      {{ form_row(UserPasswordType.PlainPassword) }}
+      {{ form_row(UserPasswordType.NewPassword) }}
       {{form_end(UserPasswordType)}}
 </div>
 </main>
