--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -22,6 +22,7 @@
     <li class="list-group-item text-center text-primary"><a class="btn btn-primary btn-lgz" href="/user/edition/{{app.user.id}}" role="button">Modifier mon profil</a></li>
     <li class="list-group-item text-center text-primary"><a class="btn btn-primary btn-lgz" href="/user/mdp/{{app.user.id}}" role="button">Modifier mon mot de passe</a></li>
     <li class="list-group-item text-center text-primary"><a class="btn btn-danger btn-lgz" href="/user/{{app.user.id}}" role="button">Supprimer mon compte</a></li>
+    <li class="list-group-item text-center text-primary"><a class="btn btn-primary btn-lgz" href="{{path("app_orders_all")}}" role="button">Mes commandes</a></li>
   </ul>
 </div>
 </div>
