--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -2,7 +2,7 @@
       <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{path("home.index")}}">
-            <img src="/images/main-logo.png" class="logo">
+            <img src="{{ asset('uploads/photos/' ~ logo.nom) }}" style="max-width:300px;">
           </a>
           <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <svg class="navbar-icon">
@@ -12,7 +12,7 @@
           <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
             <div class="offcanvas-header px-4 pb-0">
               <a class="navbar-brand" href="{{path("home.index")}}">
-                <img src="/images/main-logo.png" class="logo">
+                <img src="{{ asset('uploads/photos/' ~ logo.nom) }}" style="max-width:300px;">
               </a>
               <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close" data-bs-target="#bdNavbar"></button>
             </div>
@@ -53,7 +53,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="cart.html">
+                        <a href="{{path("cart_index")}}">
                           <svg class="cart">
                             <use xlink:href="#cart"></use>
                           </svg>
