--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <main class='paddingTop'>
+    <main class='paddingTop' style="margin-bottom:300px;">
     <div class="container">
         <section class="row">
             <div class="col-12">
@@ -23,11 +23,13 @@
                                 <td><img  src="/uploads/photos/{{ element.produit.image }}" class="img-fluid rounded-start" style="max-width:100px" alt="photoProduit"></td>
                                 <td class="pt-5">{{ element.produit.nom }}</td>
                                 <td class="pt-5">{{ element.produit.prix /100 }} €</td>
-                                <td class="pt-5">{{ element.quantity }}</td>
+                                <td class="pt-5">
+                                <form action="{{ path('cart_add', {'id': element.produit.id}) }}" method="post">
+                                <input type="number" name="quantity" min="1" max="{{ element.produit.stock }}" value="{{ element.quantity }}" class="ms-4">
+                                </form>
+                                </td>
                                 <td class="pt-5">{{ element.produit.prix /100 * element.quantity }} €</td>
                                 <td>
-                                    <a href='{{ path('cart_add' , {id: element.produit.id}) }}' class='btn btn-success mt-4'>+</a> 
-                                    <a href='{{ path('cart_remove' , {id: element.produit.id}) }}' class='btn btn-warning mt-4'>-</a>
                                     <a href='{{ path('cart_delete' , {id: element.produit.id}) }}' class='btn btn-danger mt-4'>Supprimer</a>
                                 </td>
                             </tr>
