--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -2,7 +2,7 @@
       <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{path("home.index")}}">
-            <img src="{{ asset('uploads/photos/' ~ logo.nom) }}" style="max-width:300px;">
+            <img src="{{ asset('uploads/photos/' ~ logo_service.getLogo().nom) }}" style="max-width:300px;">
           </a>
           <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <svg class="navbar-icon">
@@ -12,47 +12,46 @@
           <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
             <div class="offcanvas-header px-4 pb-0">
               <a class="navbar-brand" href="{{path("home.index")}}">
-                <img src="{{ asset('uploads/photos/' ~ logo.nom) }}" style="max-width:300px;">
+                <img src="{{ asset('uploads/photos/' ~ logo_service.getLogo().nom) }}" style="max-width:300px;">
               </a>
               <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close" data-bs-target="#bdNavbar"></button>
             </div>
             <div class="offcanvas-body">
               <ul id="navbar" class="navbar-nav text-uppercase justify-content-center align-items-center flex-grow-1 pe-3">
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                   <a class="nav-link me-4 active" href="{{path("home.index")}}">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                       <a href="{{path("app_produit_index")}}" class="dropdown-item">Shop</a>
                     </li>
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                       <a href="#" class="dropdown-item">Blog</a>
                     </li>
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                       <a href="{{path("cart_index")}}" class="dropdown-item">Cart</a>
                     </li>
-                <li class="nav-item">
+                <li class="nav-item mt-3">
                       <a href="#" class="dropdown-item">Contact</a>
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item list-unstyled">
                   <div class="user-items ps-5">
                     <ul class="d-flex justify-content-end list-unstyled">
-                      <li class="search-item pe-3">
-                        <a href="#" class="search-button">
-                          <svg class="search">
-                            <use xlink:href="#search"></use>
-                          </svg>
-                        </a>
-                      </li>
-                      <li class="pe-3">
+                      <li class="pe-3 mt-4">
                         <a href="{{path("app_user_index")}}">
                           <svg class="user">
                             <use xlink:href="#user"></use>
                           </svg>
                         </a>
                       </li>
-                      <li>
+                      <li class="pe-3 mt-4">
+                        <a href="{{path("app_logout")}}">
+                          <svg xmlns="http://www.w3.org/2000/svg" id="logoute" viewBox="0 0 512 512">
+                            <path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"/>
+                          </svg>
+                        </a>
+                      <li class="mt-4">
                         <a href="{{path("cart_index")}}">
                           <svg class="cart">
                             <use xlink:href="#cart"></use>
