--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -38,7 +38,7 @@
         <input type="number" name="quantity" min="1" max="{{ produit.stock }}" value="1" class="ms-4">
         </form>
         {% else %}
-        <button type="button" class="btn btn-danger" disabled>Produit indisponible</button>
+        <button type="button" class="btn btn-danger mt-4" disabled>Produit indisponible</button>
         {% endif %}
 
                 <!-- Button trigger modal -->
