--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -20,5 +20,6 @@
 
         <button type="submit" class="btn btn-primary mt-4">Se connecter</button>
     </form>
+    <a href="{{ path('app_user_register') }}" class="btn btn-primary mt-4">S'inscrire</a>
     </div>
 {% endblock %}
