--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -25,7 +25,7 @@
         <br>
         {{ form_row(RegisterType.agreeTerms) }}
 
-        <button type="submit" class="btn btn-primary mt-4">Register</button>
+        <button type="submit" class="btn btn-primary mt-4">S'enregistrer</button>
     {{ form_end(RegisterType) }}
 </div>
 {% endblock %}
