--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -2,14 +2,18 @@
 
 {% block content %}
     <div class="container">
-    <h1 class="text-center mt-4 border border-4 text-secondary">BIENVENUE SUR LE PANEL ADMIN</h1>
+    <h1 class="text-center mt-4 border border-4 text-secondary"> ~ BIENVENUE SUR LE PANEL ADMIN ~</h1>
     <div class="mt-5">
-    <h4>* Vous pouvez gérer les produits, les types de produits et le logo du site via les onglets présents sur la gauche de la page.</h2>
+    <h4>* Voici toutes les fonctionnalités disponible via le panel Admin.</h2>
     <h6 class="mt-5">- Vous avez la possibilité de revenir sur la page d'accueil du site via l'onglet "Back to the website" .</h6>
-    <h6 class="mt-3">- Vous pouvez créer,voir ,modifier ou supprimer un produit via l'onglet "Produit".</h6>
-    <h6 class="mt-3">- Vous pouvez créer,voir ,modifier ou supprimer un type de produit via l'onglet "Type de produit".</h6>
+    <h6 class="mt-3 ">- Vous pouvez créer,voir ,modifier ou supprimer un produit via l'onglet "Produit"/
+    Les produits ajoutés seront automatiquement ajouté au shop.</h6>
+    <h6 class="mt-3">- Vous pouvez créer,voir ,modifier ou supprimer un type de produit via l'onglet "Type de produit" /
+    Les types ajoutés seront automatiquement ajouté au shop et au filtre.</h6>
+    <h6 class="mt-3">- Vous pouvez voir, modifer le role d'un utilisateur ou le supprimer via l'onglet "User".</h6>
     <h6 class="mt-3">- En ce qui concerne le logo, il est possible de le modifier en cliquant sur les trois petit points puis sur edit et en sélectionnant une image dans votre ordinateur.</h6>
     <h6 class="mt-3">- Vous avez la possibilité aussi de voir dans l'onglet "Orders", les commandes passées par les utilisateurs.</h6>
+    <h6 class="mt-3">- Vous pouvez ajouter ou modifier un lien du header via l'onglet "Nav".</h6>
     <h6 claas="mt-3">- Puis enfin de vous déconnecter via l'onglet "Logout".</h6>
     </div>
     </div>
